Various spacing and headline color fixes

--- a/src/components/team-pictures.sass
+++ b/src/components/team-pictures.sass
@@ -5,9 +5,6 @@
   > .text
     margin-left: 5rem
 
-    > h1
-      color: $color-red
-
     > p
       font-size: 1.8rem
       letter-spacing: 0.045rem
