--- a/src/routes/careers.sass
+++ b/src/routes/careers.sass
@@ -23,11 +23,12 @@
       margin-top: -19rem
 
       @media screen and (min-width: 1100px)
-        height: calc(100vh - 37rem)
+        height: calc(100vh - 28rem)
 
       > h1
         font-weight: bold
         margin-left: 5rem
+        margin-top: 10rem
         max-width: 84rem
         position: relative
         white-space: pre-line
@@ -45,13 +46,10 @@
 
     > .workplaces
       position: relative
-      padding: 0 1rem
+      // padding: 0 1rem
 
       > .text
         margin: 0 0 7rem 5rem
-
-        > h1
-          color: $color-red
 
         > p
           font-size: 1.8rem
@@ -64,8 +62,8 @@
         display: flex
         flex-direction: column
         position: relative
-        right: 1rem
-        width: calc(100% + 2rem)
+        // right: 1rem
+        // width: calc(100% + 2rem)
         animation: animateIn .5s ease forwards
         opacity: 0
 
@@ -131,9 +129,6 @@
 
       > .text
         margin-left: 5rem
-
-        > h1
-          color: $color-red
 
         > p
           font-size: 1.8rem
@@ -248,7 +243,7 @@
 
         > .text
           margin-bottom: 6rem
-          padding: 0 4rem
+          padding: 0 3rem
 
         > .content > .workplace, > .content > .position,
           background: #0E121A
