--- a/src/routes/team.sass
+++ b/src/routes/team.sass
@@ -23,11 +23,12 @@
       margin-top: -19rem
 
       @media screen and (min-width: 1100px)
-        height: calc(100vh - 30rem)
+        height: calc(100vh - 28rem)
 
       > h1
         font-weight: bold
         margin-left: 5rem
+        margin-top: 10rem
         max-width: 84rem
         position: relative
         z-index: 1
@@ -54,9 +55,6 @@
 
       > .text
         margin: 0 0 5rem 5rem
-
-        > h1
-          color: $color-red
 
         > p
           font-size: 1.8rem
